# ml2-project

./: README.md  eval_stud.py  model.ipynb  pyproject.toml
data/: train_data.csv  train_gt.csv  valid_data.csv  valid_gt.csv
ner/: finetune_bert.ipynb
report/: _quarto.yml  report.ipynb
