[tool.poetry]
name = "ml2"
version = "0.1.0"
description = ""
authors = ["Truong Hoang <truong173@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml2"}]

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
numpy = "^1.22.4"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
ipykernel = "^6.25.1"
gensim = "^4.3.1"
python-dotenv = "^1.0.0"
chardet = "^5.2.0"
torch = "2.0.1"
conda-lock = "^2.1.2"
tqdm = "^4.66.1"
pre-commit = "^3.3.3"
pymongo = "^4.5.0"
beautifulsoup4 = "^4.12.2"
pyarrow = "^13.0.0"
pytorch-lightning = "^2.0.8"
torchmetrics = "^1.1.2"
transformers = {extras = ["torch"], version = "^4.33.1"}
accelerate = "^0.23.0"
datasets = "^2.14.5"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
